force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__Custom__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Custom__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not this subscription has been made by the user</description>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>