force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__DeclarativeMappingCount__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DeclarativeMappingCount__c</fullName>
    <label>Number of Declarative Mappings</label>
    <summaryForeignKey>fferpcore__DSCustomMapping__c.fferpcore__Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>