force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__DocumentationURL__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DocumentationURL__c</fullName>
    <label>Documentation URL</label>
    <type>Url</type>
</CustomField>