force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__Enabled__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send messages to this consumer.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>