force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__ExcludeFromSelf__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ExcludeFromSelf__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this subscription excludes messages sent by the same product.</description>
    <label>Exclude Own Messages</label>
    <type>Checkbox</type>
</CustomField>