force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__Filters__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Filters__c</fullName>
    <description>Serialised filters.</description>
    <label>Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>