force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__LinkControlDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LinkControlDeveloperName__c</fullName>
    <inlineHelpText>This field must be populated to enable object linking. Publication source objects that wish to link to this subscription target object should have specifically named fields that include this Link Control Developer Name.</inlineHelpText>
    <label>Link Control Developer Name</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>