force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__LinkControlFor__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LinkControlFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is populated automatically when a Link Control subscription is created and should not be populated by the user.</inlineHelpText>
    <label>Link Control For</label>
    <referenceTo>fferpcore__MessagingPublication__c</referenceTo>
    <relationshipLabel>Link Control Subscription</relationshipLabel>
    <relationshipName>LinkControlSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>