force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__OwnerProduct__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__OwnerProduct__c</fullName>
    <label>Subscriber</label>
    <referenceTo>fferpcore__ERPProduct__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>MessagingSubscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>