force-app/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__ProductProxy__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ProductProxy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proxy</label>
    <referenceTo>fferpcore__ProductProxy__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>